Fix contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -408,6 +408,6 @@ footer p {
     width: 30%;
 
 }
-footer p {
+footer p, em {
     color: white;
 }
